# slurmssh

./: .gitignore  README.md  basic_usage.slurm  pyproject.toml  slurmssh.py  slurmssh_test.py
examples/: README.md  example_job.py  job.slurm
examples/arguments/: arguments.slurm
examples/basic/: basic_usage.py
